fix z-index for thumbnail highlight

--- a/packages/gallery/src/components/styles/gallery.scss
+++ b/packages/gallery/src/components/styles/gallery.scss
@@ -587,10 +587,8 @@ div.pro-gallery {
       border-radius: 0px;
       cursor: pointer;
       
-      &.pro-gallery-highlight {
-        &:before {
+      &.pro-gallery-highlight::after {
           content: '';
-          z-index: 1;
           display: block;
           height: 100%;
           position: absolute;
@@ -598,7 +596,6 @@ div.pro-gallery {
           left: 0;
           width: 100%;
           background-color: rgba(255, 255, 255, .6);
-        }
       }
     }
   }
@@ -639,7 +636,7 @@ div.pro-gallery {
     }
 
 
-    .thumbnailItem.pro-gallery-highlight::before {
+    .thumbnailItem.pro-gallery-highlight::after {
       box-shadow: inset 0 0 1px 2px $wix-blue, inset 0 0 7px 0 $white, 0 0 10px -5px $wix-blue;
     }
 
